# Deploiement_systeme_RAG

./: .gitignore  README.md  pyproject.toml
notebook/: notebook_preprocessing.ipynb
